// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Accordion flush variant renders correctly 1`] = `
<jest>
  <div
    class="accordion accordion-flush"
    id="accordion-1"
  >
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-1"
      >
        <button
          aria-controls="collapse-1-1"
          aria-expanded="false"
          autocomplete="off"
          class=" accordion-button collapsed"
          data-bs-target="#collapse-1-1"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #1
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-1"
        class="accordion-collapse collapse show"
        data-bs-parent="#accordion-1"
        id="collapse-1-1"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-2"
      >
        <button
          aria-controls="collapse-1-2"
          aria-expanded="false"
          autocomplete="off"
          class=" accordion-button collapsed"
          data-bs-target="#collapse-1-2"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #2
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-2"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-2"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-3"
      >
        <button
          aria-controls="collapse-1-3"
          aria-expanded="false"
          autocomplete="off"
          class=" accordion-button collapsed"
          data-bs-target="#collapse-1-3"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #3
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-3"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-3"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Accordion renders correctly 1`] = `
<jest>
  <div
    class="accordion"
    id="accordion-1"
  >
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-1"
      >
        <button
          aria-controls="collapse-1-1"
          aria-expanded="false"
          autocomplete="off"
          class=" accordion-button collapsed"
          data-bs-target="#collapse-1-1"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #1
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-1"
        class="accordion-collapse collapse show"
        data-bs-parent="#accordion-1"
        id="collapse-1-1"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-2"
      >
        <button
          aria-controls="collapse-1-2"
          aria-expanded="false"
          autocomplete="off"
          class=" accordion-button collapsed"
          data-bs-target="#collapse-1-2"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #2
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-2"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-2"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
    <div
      class="accordion-item"
    >
      <h2
        class="accordion-header"
        id="heading-1-3"
      >
        <button
          aria-controls="collapse-1-3"
          aria-expanded="false"
          autocomplete="off"
          class=" accordion-button collapsed"
          data-bs-target="#collapse-1-3"
          data-bs-toggle="collapse"
          type="button"
        >
          Accordion Item #3
        </button>
      </h2>
      <div
        aria-labelledby="heading-1-3"
        class="accordion-collapse collapse"
        data-bs-parent="#accordion-1"
        id="collapse-1-3"
      >
        <div
          class="accordion-body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </div>
      </div>
    </div>
  </div>
</jest>
`;
